syntax = "proto3";

package employee_service.requests.device.refresh_device_token;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nicodanke/gesty-api/shared/proto/employee-service/requests/device";

message RefreshDeviceTokenRequest {
    int64 id = 1;
    string refreshToken = 2;
}

message RefreshDeviceTokenResponse {
    string accessToken = 1;
    string refreshToken = 2;
    google.protobuf.Timestamp accessTokenExpiresAt = 3;
    google.protobuf.Timestamp refreshTokenExpiresAt = 4;
    repeated int64 actionIds = 5;
}